@startuml hsm-state-chart
title Work item lifecycle — src/modules/graph/work-item.scxml (ADR 015)

skinparam shadowing false

state pre_pr {
  [*] --> planned

  state planned
  state drafting
  state ready
  state in_progress
  state run_errored

  planned --> drafting : user.start_draft
  planned --> in_progress : user.dispatch
  drafting --> ready : draft.completed
  drafting --> run_errored : draft.failed
  ready --> drafting : user.start_draft
  ready --> in_progress : user.dispatch
  in_progress --> open_pr : run.completed [pr_exists]
  in_progress --> merged_pr : run.completed [!pr_exists]
  in_progress --> run_errored : run.error
  in_progress --> ready : user.investigate
  in_progress --> drafting : user.start_draft
  run_errored --> in_progress : user.retry
  run_errored --> ready : user.investigate
}

state deferred
state open_pr : onEntry stampMeta:\nstudio_open_pr_sync
state merged_pr : onEntry stampMeta:\nstudio_post_merge_sync
state closed : onEntry stampMeta:\nstudio_issue_close_sync
state done <<end>>
state archived <<end>>
state cancelled <<end>>

' Inherited transitions on the pre_pr composite
pre_pr --> open_pr : gh.pr_opened
pre_pr --> cancelled : user.cancel
pre_pr --> deferred : user.defer / rememberHistory

deferred --> pre_pr : user.undefer\n(via shallow history\npre_pr_history)

open_pr --> merged_pr : gh.pr_merged
open_pr --> closed : gh.issue_closed

merged_pr --> done : user.finalize /\ncloseGhIssue
merged_pr --> archived : user.archive_and_finalize /\ncloseGhIssue, runArchiver

closed --> done : user.finalize
closed --> archived : user.archive_and_finalize /\nrunArchiver

note right of pre_pr
  Composite parent; shared
  transitions declared once
  and inherited by every
  substate. A shallow
  <history> node restores the
  exact substate after
  user.undefer.
end note

note bottom of merged_pr
  Action handlers registered by
  HsmActionHandlers:
  - closeGhIssue (gh issue close)
  - runArchiver (move plan +
    terminal runs → archives/)
  Actions mutate an
  HsmActionHandlerContext and
  run BEFORE the state write.
end note

note left of in_progress
  Run status (queued, preparing,
  running, disambiguating,
  completed, error, blocked)
  lives on ExecutionRunRecord.
  Only terminal run events cross
  into the HSM as run.completed
  / run.error.
end note

@enduml
